# controllers/pariwarRolesController.js
@@ -4,21 +4,37 @@ import { jwtAuthentication } from "../utils/jwt.js";
 export class PariwarRolesController {
 
   static async getPariwarRoles(req, res) {
-    const customer = jwtAuthentication.verifyToken(req); 
+    jwtAuthentication.verifyToken(req); 
     const pariwarRoles = await pariwarRolesService.getPariwar(
-      customer._id
+      req. params.pariwarId,
     );
 
     res.send(pariwarRoles);
   }
 
   static async createPariwarRoles (req, res) {
-    const customer = jwtAuthentication.verifyToken(req);  
+    jwtAuthentication.verifyToken(req);  
     const pariwarRoles = await pariwarRolesService.createPariwar({
       ...req.body,
-      customerId: customer._id,
+      pariwarId: req. params.pariwarId,
     });
 
     res.send(pariwarRoles);
+  }
+  
+  static async updatePariwarRole (req,res) {    
+    const customer = jwtAuthentication.verifyToken(req);  
+    const pariwarRole = await pariwarRolesService.updatePariwarRole(req.params.id,       
+      req.body, 
+      customer._id);
+
+    res.send(pariwarRole); 
+  }
+
+  static async deletePariwarRole (req, res) {
+    const customer = jwtAuthentication.verifyToken(req); 
+    await pariwarRolesService.deletePariwarRole(req.params.id, customer._id);
+
+    res.send({ success: true });
   }
 }
